<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:src="@drawable/ic_keyboard_arrow_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <com.warkiz.widget.IndicatorSeekBar
        android:id="@+id/indicatorSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:isb_indicator_color="@color/light_orange"
        app:isb_indicator_text_color="@color/white"
        app:isb_indicator_text_size="18sp"
        app:isb_max="150"
        app:isb_min="0"
        app:isb_only_thumb_draggable="false"
        app:isb_seek_smoothly="true"
        app:isb_show_indicator="rounded_rectangle"
        app:isb_show_tick_marks_type="oval"
        app:isb_show_tick_texts="true"
        app:isb_thumb_color="@color/orange"
        app:isb_thumb_size="20dp"
        app:isb_track_background_color="@color/light_orange"
        app:isb_track_background_size="2dp"
        app:isb_track_progress_color="@color/orange"
        app:isb_track_progress_size="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/silver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

    </FrameLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:layoutDirection="ltr"
        android:text="@string/search_settings"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layoutDirection="ltr"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2">

        <RadioButton
            android:id="@+id/distance_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:buttonTint="@color/light_orange"
            android:layoutDirection="ltr"
            android:paddingStart="16dp"
            android:text="@string/distance"
            tools:ignore="RtlSymmetry" />

        <RadioButton
            android:id="@+id/locality_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/light_orange"
            android:layoutDirection="ltr"
            android:paddingStart="32dp"
            android:text="@string/city"
            tools:ignore="RtlSymmetry" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layoutDirection="ltr"
        android:text="@string/search_settings_explain"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:background="@color/silver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/silver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/indicatorSeekBar">

    </FrameLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layoutDirection="ltr"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/specify_the_distance_you_want_us_to_check_for_you"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>